--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                 <div class="box_container">
 
                     <div class="inner_box">
-                        <h2 class="form_heading">Application Form Information</h2>
+                        <h2 class="form_heading">Registration Form Information</h2>
 
                         <div class="upper-input">
 
