--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
                             <div class="input_container">
                                 <div class="input_withlabel">
-                                    <label class="input_label" for="application">Registration Form No <span
+                                    <label class="input_label" for="application">Application Form No <span
                                             class="txt-red">*</span>:</label>
                                     <input class="input_field" type="text" name="application" id="applicationNo">
                                 </div>
